Fixed dark mode on mobile and accessiblity concerns

--- a/public/style.css
+++ b/public/style.css
@@ -111,9 +111,9 @@ li:not(:last-child) {
 #menu span {
   width: 100%;
   height: 0.5rem;
-  background: black;
+  background: var(--text-color);
   min-height: 0.5rem;
-  background: black;
+  background: var(--text-color);
   border-radius: 0.25rem;
 }
 
@@ -352,6 +352,10 @@ li:not(:last-child) {
   /* align-items: center; */
 }
 
+.align-center {
+  align-items: center;
+}
+
 .space-even {
   width: 100%;
   justify-content: space-evenly;
@@ -480,6 +484,7 @@ h2 {
 }
 
 #dark-mode-toggle {
+  z-index: 2;
   box-sizing: content-box;
   width: 2rem;
   height: 2rem;
